@@ -1,3 +1,11 @@
+2004-12-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b298
+
+	* Fix: Make view_comments html4.01
+
+	* Change: Only show subalbums in view_comments that have comments.
+
+	* Change: Enhanced general footer.
+
 2004-12-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b297
 
 	* Change: Enhanced albumtree. Now the depth can be given.
